syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ljzn.grpc.reason";
option objc_class_prefix = "REASON";

import "reason/reason.message.proto";

package VisitorSystem_cq;



message ReasonDataApplyRequest {
    string client_id = 1;
    string client_secret = 2; //设备编号的加盐MD5值，盐值由客户端与服务器端约定
    int64 version = 3;
    int32 belongId = 4;
}


message ReasonDataApplyResponse {
    int32 code = 1;
    string message = 2;
    string server_secret = 3;
    int64 serverVersion = 4; //当前版本信息
    repeated ReasonMessage reasonMessages = 5; //返回当前版本下的所有到访事由信息
}

service ReasonAuthService {
    rpc ReasonDataApply (ReasonDataApplyRequest) returns (ReasonDataApplyResponse){};
}